Jokify: Attempt to fix alignment issue on mobile devices 4; change background color to understand what is going on 2

--- a/apps/jokify/sass/main.scss
+++ b/apps/jokify/sass/main.scss
@@ -108,6 +108,7 @@ $jokeSpacing: 15px;
   padding-bottom: ($buttonSize / 2 + $jokeSpacing);
   padding-left: $jokeSpacing;
   box-sizing: border-box;
+  background-color: blue;
 }
 
 @include logarithmic-translation(100);
